Canary/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-app-v2
  labels:
    app: canary-app
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canary-app
      version: v2
  template:
    metadata:
      labels:
        app: canary-app
        version: v2
    spec:
      containers:
      - name: canary-app
        image: daryladriene/tictactoe:4
        ports:
        - containerPort: 80
