Canary/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-app-v1
spec:
  selector:
    app: canary-app
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
