Canary/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-app-v2
spec:
  selector:
    app: canary-app
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
