Canary/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-app-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "100"
spec:
  ingressClassName: nginx
  rules:
    - host: canary-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canary-app-v2
                port:
                  number: 80
