Canary/ingress-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-app-ingress-v1
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: canary-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canary-app-v1
                port:
                  number: 80
